--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,7 +16,7 @@ main:
     url: /year-archive/
     
   - title: "CV"
-    url: /cv/
+    url: /files/RenFei_Tan_CV_202111.pdf
     
   - title: "Guide"
     url: /markdown/
